--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -48,13 +48,13 @@
 <!-- INTRO -->
 <div class="intro">
    <div class="content">
-      <!-- <div class="card">
-         <h1></h1>
-         <p>Nettbutikker i 2021</p>
-      </div> -->
       <div class="card">
-         <h1>50+</h1>
+         <h1>15+</h1>
          <p>Drevet Nettbutikker</p>
+      </div>
+      <div class="card">
+         <h1>50 000+</h1>
+         <p>Kroner Bearbeidet</p>
       </div>
       <div class="card">
          <h1>2 år+</h1>
@@ -68,6 +68,8 @@
 </div>
 <!-- WHY WEBISER -->
 <div class="why-webiser">
+   <!-- HALF SQUARE -->
+   <div class="square"></div>
    <!-- WHY WEBISER CONTENT -->
    <div class="content">
       <!-- WHY WEBISER TEXT -->
@@ -78,9 +80,8 @@
          <p class="why-webiser-long-ptext">
             Uansett produktet du selger trenger du en high-end nettside for å konvertere.
             Det er ikke nok med en pen nettside, 
-            du trenger en enkel måte å få flere salg, maksimere konverteringer og drive bedriften din.
-            <br>
-            <span>Webiser gjør alt det her for deg</span>
+            du trenger en nettside som gjør det enkelt å få flere salg, maksimere konverteringer og drive bedriften din.
+            <!-- <span>Webiser gjør alt det her for deg</span> -->
          </p>
       </div>
    </div>
@@ -202,6 +203,63 @@
       </div>
    </div>
 </div>
+<!-- PROCCESS -->
+<div class="proccess">
+   <div class="content">
+      <div class="text">
+         <h1>Kom i gang med tre enkelte steg</h1>
+      </div>
+      <div class="proccess-card">
+         <div class="proccess-image">
+            <div class="ribbon-number">1</div>
+            <img src="{% static '/images/other/woman-laptop.jpg' %}" alt="webiser">
+         </div>
+         <div class="proccess-image-text">
+            <h1>Velg plan</h1>
+            <p>Det første steget er å bestemme hvilken type plan du skal velge. Du kan også velge hosting som vi anbefaller sterkt til kun 60kr/m</p>
+         </div>
+      </div>
+
+      <div class="proccess-card">
+         <div class="proccess-image">
+            <div class="ribbon-number">2</div>
+            <img src="{% static '/images/other/man-phone.jpg' %}" alt="webiser">
+         </div>
+         <div class="proccess-image-text">
+            <h1>Send bestillingen</h1>
+            <p>Nå trenger du ikke gjøre noe mer, med engang bestillingen har blitt motatt vil designere våres se over kravene dine</p>
+         </div>
+      </div>
+
+      <div class="proccess-card">
+         <div class="proccess-image">
+            <div class="ribbon-number">3</div>
+            <img src="{% static '/images/other/woman-relax.jpg' %}" alt="webiser">
+         </div>
+         <div class="proccess-image-text">
+            <h1>Vent på svar</h1>
+            <p>Ta deg en kopp kafe og slapp av mens vi lagere designen!</p>
+         </div>
+      </div>
+
+   </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <br>
 <br>
