--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -59,9 +59,18 @@ $loader: rgb(80, 104, 180);
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 100px;
+  margin-top: 80px;
   padding: 17px;
   position: relative;
+  .square{
+    width: 0;
+    height: 0;
+    border-bottom: 220px solid rgba(0, 0, 0, 0.04);
+    border-left: 220px solid transparent;
+    position: absolute;
+    right: 0;
+    bottom: -70px;
+  }
   .content{
     .text{
       text-align: center;
@@ -88,21 +97,20 @@ $loader: rgb(80, 104, 180);
         color: #183B56;
         opacity: 0.7;
         font-size: 16px;
-        span{
-          position: relative;
-          top: 20px;
-          font-weight: bold;
-          &::after{
-            content: '';
-            display: block;
-            position: relative;
-            left: 50%;
-            transform: translateX(-50%) translateY(10px);
-            width: 70%;
-            height: 3px;
-            background: #183b5665;
-          }
-        }
+        // span{
+        //   position: relative;
+        //   top: 17px;
+        //   &::after{
+        //     content: '';
+        //     display: block;
+        //     position: relative;
+        //     left: 50%;
+        //     transform: translateX(-50%) translateY(10px);
+        //     width: 70%;
+        //     height: 3px;
+        //     background: #183b5665;
+        //   }
+        // }
       }
     }
   }
@@ -116,7 +124,7 @@ $loader: rgb(80, 104, 180);
   padding: 25px;
   .content{
     .text{
-      text-align: center;
+      text-align: left;
       margin-bottom: 45px;
       h1{
         color: #183B56;
@@ -177,6 +185,7 @@ $loader: rgb(80, 104, 180);
   width: 100%;
   height: auto;
   margin-top: 0px;
+  transform: translateY(-10px);
   padding: 0px 25px;
   .content{
     text-align: left;
@@ -186,10 +195,10 @@ $loader: rgb(80, 104, 180);
       margin: 27px 0;
       .icon{
         border-radius: 50%;
-        padding: 3px 6px;
-        background: rgba(28, 211, 28, 0.2);
+        padding: 3px 7px;
+        background: rgba(28, 211, 28, 0.15);
         i{
-          color: rgba(28, 211, 28, 0.7);
+          color: rgba(28, 211, 28, 0.534);
           font-size: 16px;
         }
       }
@@ -203,8 +212,99 @@ $loader: rgb(80, 104, 180);
     }
   }
 }
-
-
+// PROCCESS
+.proccess{
+  background: white;
+  width: 100%;
+  height: auto;
+  margin-top: 60px;
+  padding: 25px;
+  .content{
+    i{
+      font-size: 50px;
+      margin: 50px auto;
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #0088F9;
+    }
+    .text{
+      text-align: left;
+      margin-bottom: 45px;
+      h1{
+        color: #183B56;
+        font-size: 30px;
+        font-weight: 800;
+        text-shadow: 1px 0 #183B56;
+        letter-spacing:1px; 
+      }
+    }
+    .proccess-card{
+      margin: 60px auto;
+    }
+    .proccess-image{
+      position: relative;
+      left: 50%;
+      transform: translateX(-50%);
+      border-top-left-radius: 25px;
+      border-top-right-radius: 25px;
+      border-bottom-right-radius: 25px;
+      border-bottom-left-radius: 0;
+      width: 100%;
+      img{
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.164);
+        width: 100%;
+        height: auto;
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border-bottom-left-radius: 0;
+        filter: brightness(90%);
+        margin: 15px auto;
+      }
+      .ribbon-number{
+        position: absolute;
+        right: 30px;
+        top: -12px;
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+        background: #007be0;
+        font-size: 22px;
+        color: white;
+        z-index: 10;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 4px;
+      }
+    }
+    .proccess-image-text{
+      width: 100%;
+      transform: translateY(3px);
+      &::before{
+        content: '';
+        display: block;
+        position: absolute;
+        height: 28px;
+        width: 4px;
+        background: #183b56bd;
+        border-radius: 12px;
+      }
+      h1{
+        transform: translateX(20px);
+        font-size: 20px;
+        font-weight: 600;
+      }
+      p{
+        transform: translateX(20px) translateY(-3px);
+        font-size: 16.3px;
+        letter-spacing: 0.5px;
+        opacity: 0.8;
+      }
+    }
+  }
+}
 
 
 
