--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -168,8 +168,8 @@
       </div>
    </div>
 </div>
-<!-- BENEFITS -->
-<div class="benefits">
+<!-- WEBSITE BENEFITS -->
+<div class="website-benefits">
    <div class="content">
       <div class="flex">
          <div class="icon">
@@ -244,8 +244,72 @@
 
    </div>
 </div>
+<!-- HOSTING AND DATA -->
+<div class="hosting">
+   <div class="content">
+      <div class="text">
+         <p class="hosting-headingp">data og hosting</p>
+         <h1>Mega Rask Hosting og Sikkerhet Av Dataen Din</h1>
+      </div>
+      <div class="hosting-image">
+         <img src="{% static '/images/other/hosting.jpg' %}" alt="hosting">
+      </div>
+      <p class="hosting-longp">
+         Vi tilbyr en hosting tjeneste som vi <strong>anbefaller på det sterkeste</strong> for kunn 60kr/m. 
+         Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på, og du vil få SSL inkludert i de 60kr/m.
+         Vi sørger for at med bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden. 
+         Du kan selvfølgelig velge å hoste nettsiden selv, men om du ønsker vi skal gjøre endringer på nettsiden, så tar det litt lengre tid.
+         Du kan velge å benytte hostingen tjenesten våres når du skal sende inn bestilling skjemaet.
 
-
+      </p>
+   </div>
+</div>
+<!-- HOSTING BENEFITS -->
+<div class="hosting-benefits">
+   <div class="content">
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>99% oppetid</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Rask og trygg hosting</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>SSL inkludert i prisen</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Enklere for deg</p>
+      </div>
+      <div class="flex">
+         <div class="icon">
+            <i class="fa-solid fa-check"></i>
+         </div>
+         <p>Kunn 60kr/m</p>
+      </div>
+   </div>
+</div>
+<!-- WEBISTE EDITS -->
+<div class="edit">
+   <div class="content">
+      <div class="text">
+         <p class="edit-headingp">endringer på nettsiden</p>
+         <h1>Spørr Om Endringer På Nettsiden</h1>
+      </div>
+      <p class="edit-longp">
+      </p>
+   </div>
+</div>
 
 
 
