--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -170,32 +170,42 @@
 </div>
 <!-- WEBSITE BENEFITS -->
 <div class="website-benefits">
+   <!-- WEBSITE BENEFITS CONTENT -->
    <div class="content">
+      <!-- WEBSITE BENEFITS FLEX -->
       <div class="flex">
+         <!-- WEBSITE BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>100% responsiv</p>
       </div>
+      <!-- WEBSITE BENEFITS FLEX -->
       <div class="flex">
+         <!-- WEBSITE BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>Enkelere måte å selge</p>
       </div>
+      <!-- WEBSITE BENEFITS FLEX -->
       <div class="flex">
+         <!-- WEBSITE BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>Konverter salg</p>
       </div>
       <div class="flex">
+         <!-- WEBSITE BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>Bli synlig på nettet</p>
       </div>
+      <!-- WEBSITE BENEFITS FLEX -->
       <div class="flex">
+         <!-- WEBSITE BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
@@ -205,37 +215,52 @@
 </div>
 <!-- PROCCESS -->
 <div class="proccess">
+   <!-- PROCCESS CONTENT -->
    <div class="content">
+      <!-- PROCCESS MAIN TEXTS -->
       <div class="text">
-         <h1>Kom i gang med tre enkelte steg</h1>
+         <h1>Kom i gang med tre enkle steg</h1>
       </div>
+      <!-- PROCCESS CARD -->
       <div class="proccess-card">
+         <!-- PROCCESS IMAGE SECTION -->
          <div class="proccess-image">
+            <!-- IMAGE RIBBON NUMBER -->
             <div class="ribbon-number">1</div>
+            <!-- IMAGE -->
             <img src="{% static '/images/other/woman-laptop.jpg' %}" alt="webiser">
          </div>
+         <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Velg plan</h1>
             <p>Det første steget er å bestemme hvilken type plan du skal velge. Du kan også velge hosting som vi anbefaller sterkt til kun 60kr/m</p>
          </div>
       </div>
-
+      <!-- PROCCESS CARD -->
       <div class="proccess-card">
+         <!-- PROCCESS IMAGE SECTION -->
          <div class="proccess-image">
+            <!-- IMAGE RIBBON NUMBER -->
             <div class="ribbon-number">2</div>
+            <!-- IMAGE -->
             <img src="{% static '/images/other/man-phone.jpg' %}" alt="webiser">
          </div>
+         <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Send bestillingen</h1>
             <p>Nå trenger du ikke gjøre noe mer, med engang bestillingen har blitt motatt vil designere våres se over kravene dine</p>
          </div>
       </div>
-
+      <!-- PROCCESS CARD -->
       <div class="proccess-card">
+         <!-- PROCCESS IMAGE SECTION -->
          <div class="proccess-image">
+            <!-- IMAGE RIBBON NUMBER -->
             <div class="ribbon-number">3</div>
+            <!-- IMAGE -->
             <img src="{% static '/images/other/woman-relax.jpg' %}" alt="webiser">
          </div>
+         <!-- PROCCESS IMAGE TEXT -->
          <div class="proccess-image-text">
             <h1>Vent på svar</h1>
             <p>Ta deg en kopp kafe og slapp av mens vi lagere designen!</p>
@@ -246,18 +271,22 @@
 </div>
 <!-- HOSTING AND DATA -->
 <div class="hosting">
+   <!-- HOSTING CONTENT -->
    <div class="content">
+      <!-- HOSTING TEXT -->
       <div class="text">
          <p class="hosting-headingp">data og hosting</p>
          <h1>Mega Rask Hosting og Sikkerhet Av Dataen Din</h1>
       </div>
+      <!-- HOSTING IMAGE SECTION -->
       <div class="hosting-image">
          <img src="{% static '/images/other/hosting.jpg' %}" alt="hosting">
       </div>
+      <!-- HOSTING LONG PARAGRAPH -->
       <p class="hosting-longp">
          Vi tilbyr en hosting tjeneste som vi <strong>anbefaller på det sterkeste</strong> for kunn 60kr/m. 
-         Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på, og du vil få SSL inkludert i de 60kr/m.
-         Vi sørger for at med bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden. 
+         Hostingen er gjort via en sikker server, og alle dataene dine vil bli tatt vare på, og du vil få inkludert SSL i de 60kr/m.
+         Vi sørger for at ved bruk av hosting tjenesten våres, så garanterer vi 99% oppetid på nettisiden. 
          Du kan selvfølgelig velge å hoste nettsiden selv, men om du ønsker vi skal gjøre endringer på nettsiden, så tar det litt lengre tid.
          Du kan velge å benytte hostingen tjenesten våres når du skal sende inn bestilling skjemaet.
 
@@ -266,32 +295,43 @@
 </div>
 <!-- HOSTING BENEFITS -->
 <div class="hosting-benefits">
+   <!-- HOSTING BENEFITS CONTENT -->
    <div class="content">
+      <!-- HOSTING BENEFITS FLEX -->
       <div class="flex">
+         <!-- HOSTING BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>99% oppetid</p>
       </div>
+      <!-- HOSTING BENEFITS FLEX -->
       <div class="flex">
+         <!-- HOSTING BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>Rask og trygg hosting</p>
       </div>
+      <!-- HOSTING BENEFITS FLEX -->
       <div class="flex">
+         <!-- HOSTING BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>SSL inkludert i prisen</p>
       </div>
+      <!-- HOSTING BENEFITS FLEX -->
       <div class="flex">
+         <!-- HOSTING BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
          <p>Enklere for deg</p>
       </div>
+      <!-- HOSTING BENEFITS FLEX -->
       <div class="flex">
+         <!-- HOSTING BENEFITS ICON -->
          <div class="icon">
             <i class="fa-solid fa-check"></i>
          </div>
@@ -301,16 +341,88 @@
 </div>
 <!-- WEBISTE EDITS -->
 <div class="edit">
+   <!-- WEBSITE EDTIS CONTENT -->
    <div class="content">
+      <!-- WEBSITE EDITS TEXT -->
       <div class="text">
+         <!-- WEBSITE EDITS MAIN TEXTS -->
          <p class="edit-headingp">endringer på nettsiden</p>
          <h1>Spørr Om Endringer På Nettsiden</h1>
       </div>
+      <!-- WEBISTE EDITS LONG PARAGRAPH -->
       <p class="edit-longp">
+         Om du ønsker å endre noe på nettsiden, så kan vi hjelpe deg med det HELT GRATIS kunn i 14 dager etter bestilling.
+         Etter 14 dager så blir det en pris som du og oss kommer til enighet, avhengig hvor mye du vil endre på nettsiden.
       </p>
+      <!-- WEBSITE EDITS ACTION  -->
+      <div class="webiste-edit-action">
+         <a href="/sporr-om-endringer">Spørr her</a>
+      </div>
+   </div>
+   <!-- IMAGE -->
+   <img src="{% static '/images/other/blue-line.png' %}" alt="hosting">
+</div>
+<!-- PRICES -->
+<div class="prices">
+   <!-- PRICES CONTENT -->
+   <div class="content">
+      <!-- PRODUCT FLEX SECTION -->
+      <div class="product-section">
+         {% for product in products %}
+            <!-- PRODUCT CARD -->
+            <div class="card">
+               <!-- PRODUCT NAME -->
+               <h1 class="product-name">{{ product.name }}</h1>
+               <!-- PRODUCT PRICE -->
+               <h1 class="product-price">{{ product.price | floatformat }}kr</h1>
+               <!-- PRODUCT INCLUDED -->
+               <div class="included">
+                  <!-- ECOMMERCE -->
+                  <ul>
+                     {% if product.is_ecommerce %}
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     <li>ecommerce</li>
+                     {% endif %}
+                     <!-- BLOG -->
+                     {% if product.is_blog %}
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     <li>blog</li>
+                     {% endif %}
+                  </ul>
+               </div>
+            <br>
+            <div class="product-actions">
+               <a href="{% url 'product_detail' product.slug %}"><i class="fas fa-arrow-right"></i></a>
+            </div>
+         </div>
+         {% endfor %}   
+      </div>
    </div>
 </div>
-
 
 
 
