--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -74,7 +74,7 @@ body.menu {
   transition: .3s;
   opacity: 0;
   pointer-events: none;
-  background: white;
+  background: #007be0;
   border-radius: 4px;
   text-decoration: none;
   display: -webkit-box;
@@ -88,12 +88,13 @@ body.menu {
           align-items: center;
   -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
           box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
+  border-radius: 20px;
 }
 
 #backToTop i {
-  padding-top: 5px;
-  font-size: 22px;
-  color: #4a60b9;
+  padding-top: 6px;
+  font-size: 19px;
+  color: white;
 }
 
 #backToTop.active {
