--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -62,17 +62,18 @@ body{
   transition: .3s;
   opacity: 0;
   pointer-events: none;
-  background: white;
+  background: #007be0;
   border-radius: 4px;
   text-decoration: none;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
+  border-radius: 20px;
   i{
-    padding-top: 5px;
-    font-size: 22px;
-    color: #4a60b9;
+    padding-top: 6px;
+    font-size: 19px;
+    color: white;
   }
 
   &.active{
